<resources>
    <string name="app_name">Kanban</string>
    <string name="search">Search</string>
    <string name="header_background">header background</string>
    <string name="cancel">cancel</string>
    <string name="back_and_cancel">back and cancel</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="archived">Archived</string>
    <string name="search_box">search box</string>
    <string name="blank">     </string>

<!--    Strings with argument-->
    <string name="project">Project</string>
</resources>