<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAC6C6">

    <View
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-8dp"
        android:background="@android:color/white"
        android:contentDescription="@string/header_background"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/cancelImageButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/icon_image_view_dimen"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/cancel"
        android:elevation="8dp"
        android:scaleType="fitXY"
        android:tint="@null"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/cross_icon_gray" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_and_cancel"
        android:elevation="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/cancelImageButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelImageButton"
        tools:srcCompat="@drawable/left_arrow_gray" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/search_box"
        android:elevation="8dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cancelImageButton"
        app:layout_constraintEnd_toStartOf="@+id/cancelImageButton"
        app:layout_constraintStart_toEndOf="@+id/backImageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_image_view_dimen"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/all"
            style="@style/Theme.Filter.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="3"
            android:text="@string/all" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/active"
            style="@style/Theme.Filter.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="4"
            android:text="@string/active" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            style="@style/Theme.Filter.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="5"
            android:text="@string/archived" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projectsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>